--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ build/Release
 
 # Dependency directories
 node_modules/
+
+ui/monsterclassifier/node_modules
+
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
